--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Origin</title>
+    <style>
+        h1 {
+            font-size: 40px;
+            font-family: Roboto;
+            font-weight: normal;
+            color: rgb(50, 50, 50);
+            text-align: center;
+        }
+
+        #banner {
+            width: 100%;
+            height: 360px;
+            object-fit: cover;
+        }
+
+        h2 {
+            font-family: Roboto;
+            font-size: 32px;
+            color: rgb(100, 100, 100);
+            text-align: center;
+            font-weight: normal;
+        }
+
+        .bodytext{
+            font-family: Roboto;
+            color: rgb(80,80, 80)
+        }
+
+        #container{
+            max-width: 720px;
+            margin: 0 auto 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Open Careers</h1>
-    <img src = "http://localhost:63342/PythonProject/static/career.jpg" height = "320">
-    <h2>About Us</h2>
-    <p>
-        Welcome to Origin – Where Careers Begin
-        At Origin, we believe every career has a starting point — and we're here to help you find yours.
+    <div id = "container">
+        <h1>Open Careers</h1>
+        <img id = "banner" src = "http://localhost:63342/PythonProject/static/career.jpg">
+        <h2>About Us</h2>
+        <p class = "bodytext">
+            Welcome to Origin – Where Careers Begin
+            At Origin, we believe every career has a starting point — and we're here to help you find yours.
 
-        Whether you're just stepping into the workforce, looking to make a change, or seeking your next big opportunity, Origin is your go-to platform for discovering open roles across industries, locations, and experience levels.
+            Whether you're just stepping into the workforce, looking to make a change, or seeking your next big opportunity, Origin is your go-to platform for discovering open roles across industries, locations, and experience levels.
 
-        We’re more than a job board. We’re a career launchpad — built to connect people with possibilities, and companies with talent. Every listing on Origin is carefully curated to ensure it's real, active, and relevant. No spam. No dead links. Just opportunities that move you forward.
-    </p>
-    <button>Contact Us</button>
+            We’re more than a job board. We’re a career launchpad — built to connect people with possibilities, and companies with talent. Every listing on Origin is carefully curated to ensure it's real, active, and relevant. No spam. No dead links. Just opportunities that move you forward.
+        </p>
+        <h2>Open Positions</h2>
+        <p class = "bodytext"> TODO -Show the jobs here </p>
+        <div style = "text-align:center;">
+        <button>Contact Us</button>
+        <p>Copyright 2025, Origin</p>
+        </div>
+    </div>
 </body>
 </html>
