--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Origin</title>
     <style>
         h1 {
             font-size: 40px;
@@ -45,13 +44,13 @@
         <p class = "bodytext">
             Welcome to Origin – Where Careers Begin
             At Origin, we believe every career has a starting point — and we're here to help you find yours.
-
             Whether you're just stepping into the workforce, looking to make a change, or seeking your next big opportunity, Origin is your go-to platform for discovering open roles across industries, locations, and experience levels.
-
             We’re more than a job board. We’re a career launchpad — built to connect people with possibilities, and companies with talent. Every listing on Origin is carefully curated to ensure it's real, active, and relevant. No spam. No dead links. Just opportunities that move you forward.
         </p>
         <h2>Open Positions</h2>
-        <p class = "bodytext"> TODO -Show the jobs here </p>
+        <p class = "bodytext">
+            {{jobs}}
+        </p>
         <div style = "text-align:center;">
         <button>Contact Us</button>
         <p>Copyright 2025, Origin</p>
