--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <style>
         h1 {
             font-size: 40px;
@@ -49,7 +51,9 @@
         </p>
         <h2>Open Positions</h2>
         <p class = "bodytext">
-            {{jobs}}
+            {% for job in jobs %}
+            {% include "jobinfo.html" %}
+            {% endfor %}
         </p>
         <div style = "text-align:center;">
         <button>Contact Us</button>
