--- a/templates/jobinfo.html
+++ b/templates/jobinfo.html
@@ -5,8 +5,8 @@
   <br>
   <b>Salary:</b> {{job['salary']}}
   <br>
-  <botton type="button" class="btn btn-outline-primary">
+  <a href = "mailto:orinave10@gmail.com?subject = Application for {{job['title']}} "type="button" class="btn btn-outline-primary">
     Apply
-  </botton>
+  </a>
 
 </div>
